--- a/static/activateAccountMerchant.html
+++ b/static/activateAccountMerchant.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Welcome to Swipe Rewards!</title>
+    <title>Welcome to Nouvo!</title>
     <style>
         .button {
             text-decoration: none;
