modifications in initSwipe, modifications in registerUser api for referral functionality, modifications in updateUser api to update email and password, api's - getTickets, getTicketDetails, resolveTicket, applyReferralCode, added templates - activateAccountMerchantWithPassword.html, activateAccountUserWithPassword.html, modifications in emailTemplates.js

--- a/static/activateAccountUserWithPassword.html
+++ b/static/activateAccountUserWithPassword.html
@@ -34,10 +34,10 @@
 
 <body>
     <div class="content">
-        <p class="lead">We are very excited to have you! Together, we will take your business to the next level. Through our revolutionary new tool you will be able to retain your current customers and obtain new customers - all while reducing your overall processing cost.  <br><br>
-            <a href = "$link" target="_blank">Click here</a> to finish activating your account and officially become a member of our team.</p>
+        <p class="lead">
+            <a href = "$link" target="_blank">Click here</a> to finish activating your account and start earning money for shopping at your favorite stores today. </p>
             <p class="lead">The system generated password is $password, you can use this for login purpose, please reset it soon.
-            </p><p class="lead">Here's to $username <br>- Nouvo</p>
+            </p><p class="lead">Your wallet thanks you. <br>- Nouvo</p>
     </div>
 </body>
 
